fix serial device connection

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "description": "BITACORA - Control de Acceso",
   "version": "0.1",
   "manifest_version": 2,
+  "minimum_chrome_version": "45.0.2439.3",
   "app": {
     "background": {
       "scripts": ["js/background.js"]
@@ -10,8 +11,8 @@
   },
   "icons": { "16": "img/access-app-16.png", "128": "img/access-app-128.png" },
   "permissions": [
-    "serial",
     "<all_urls>",
-    "storage"
+    "storage",
+	"serial"
   ]
 }
